# rdl2arch

./: README.md  pyproject.toml
docs/: hwif-port-shape.md  register-array-shape.md
src/rdl2arch/: __init__.py  __main__.py  config.py  dereferencer.py  emit_field_logic.py  emit_package.py  emit_regblock.py  exporter.py  identifier_filter.py  scan_design.py  validate_design.py
src/rdl2arch/cpuif/: __init__.py  apb4.py  axi4lite.py  base.py
src/rdl2arch/udps/: __init__.py
tests/: conftest.py  test_config.py  test_end_to_end.py  test_golden.py  test_unit.py  test_verilator.py
tests/cocotb_sv/: conftest.py
tests/cocotb_sv/cocotb_tests/: common.py  test_access_types.py  test_arrays_and_regfile.py  test_interrupts.py  test_minimal.py  test_readonly.py
tests/cocotb_sv/drivers/: apb4.py  axi4lite.py
tests/expected/access_types-apb4/: AccessTypes.arch  AccessTypesPkg.arch
tests/expected/access_types-axi4-lite/: AccessTypes.arch
tests/expected/arrays_and_regfile-apb4/: Channelized.arch  ChannelizedPkg.arch
tests/expected/arrays_and_regfile-axi4-lite/: Channelized.arch  ChannelizedPkg.arch
tests/expected/interrupts-apb4/: Interrupts.arch
tests/expected/interrupts-axi4-lite/: Interrupts.arch  InterruptsPkg.arch
tests/expected/minimal-apb4/: MyIp.arch
tests/expected/minimal-axi4-lite/: MyIp.arch  MyIpPkg.arch
tests/expected/readonly-apb4/: ReadonlyIp.arch
tests/rdl/: access_types.rdl  arrays_and_regfile.rdl  interrupts.rdl  minimal.rdl  readonly.rdl
tests/sim/: apb4_driver.py  axi4lite_driver.py  harness.py  test_functional.py
(+2 files in other folders)
